--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,15 +33,12 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
-      - uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.GITHUB_TOKEN }}
       - name: Release to GitHub Pages
         env:
-          GIT_USER: git
+          GIT_USER: adenohitu
+          GIT_PASS:${{secrets.GITHUB_TOKEN}}
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "gh-actions"
+          git config --global user.name "adenohitu"
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
           elif [ -e package-lock.json ]; then
