--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-medium-image-zoom": "^4.3.5",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
@@ -37,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.6.0",
+    "prettier-plugin-md-nocjsp": "^1.2.0"
   }
 }
